# ma_sonpike

./: .dockerignore  Cargo.toml  Dockerfile  compose.yml
.docker/app/: Dockerfile
.docker/nginx/: Dockerfile  nginx.conf
.docker/tor/: Dockerfile
.github/workflows/: deploy.yml  test.yml
assets/: theme.css
src/: main.rs  templates.rs
templates/: base.html  home.html  resume.html
templates/base/: footer.html  layout.html
